# HomeApiRust

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  pre_build.sh  setup.sh
migrations/2023-05-21-060003_create_users/: up.sql
migrations/2023-05-21-081123_create_usersettings/: down.sql  up.sql
migrations/2023-05-21-081209_create_huebridges/: down.sql  up.sql
migrations/2023-05-21-081235_create_wleditems/: down.sql  up.sql
src/: cors.rs  hue.rs  main.rs  repsonses.rs
src/auth/: auth.rs  routes.rs
src/db/: connection.rs  huebridges.rs  models.rs  schema.rs  users.rs  usersettings.rs  wleditems.rs
src/jwt/: auth.rs
src/plugins/: assets.rs  hue.rs  main.rs  user.rs
src/utils/: color.rs  extensions.rs
