[package]
name = "home_api_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = "0.8.10"

[dependencies.reqwest]
version = "0.11.18"
features = ["blocking"]

[dependencies.okapi]
version = "0.7.0-rc.1"

[dependencies.rocket_okapi]
version = "0.8.0-rc.2"
features = ["swagger"]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json", "secrets", "tls"]

[dependencies.diesel]
version = "2.0.4"
features = ["postgres", "sqlite"]
