[package]
name = "home_api_rust"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.14.0"
dotenv = "0.15.0"
r2d2 = "0.8.10"
rand = "0.8.5"
sha2 = "0.10.6"
jwt = "0.16.0"
schemars = "0.8.10"
crypto = { version = "0.5.0", features = ["digest"] }
hmac = "0.12.1"
futures = "0.3.0"
proc-macro2 = "1.0.64"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.libsqlite3-sys]
version = "0.26.0"
features = ["bundled"]

[dependencies.reqwest]
version = "0.11.18"
features = ["blocking"]

[dependencies.okapi]
version = "0.7.0-rc.1"

[dependencies.rocket_okapi]
version = "0.8.0-rc.2"
features = ["swagger"]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json", "secrets", "tls"]

[dependencies.diesel]
version = "2.0.0"
features = ["sqlite", "r2d2"]
